# mesospim_utils

./: .dockerignore  .gitignore  AGENTS.md  LICENCE  PROJECT_CONTEXT.md  README.md  docker-compose.yml  setup.cfg  setup.py
docker/: .env  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  map_wine.py  slurm.conf  startup.sh
docker/etc/init.d/: slurmctld  slurmd
docker/etc/slurm/: cgroup.conf  gres.conf  slurm.conf
mesospim_utils/: align_py.py  align_utils.py  automated.py  bigstitcher.py  bigstitcher_macro_templates.py  constants.py  fiji.py  imaris.py  imaris3.py  ims_stitcher.py  main.py  mesospim_btf.py  metadata.py  metadata2.py  omezarr.py  psf.py  resample_ims.py  rl.py  rl2.py  rl3.py  rl_big_array.py  rl_ome_zarr.py  slurm.py  stitch.py  stitch2.py  stitch3.py  stitch4.py  string_templates.py  utils.py
mesospim_utils/config/: docker-example.yaml  example.yaml
mesospim_utils/dev/: bdv.py  bdv2.py  bdv3.py  mesospim_zarr.py  mesospim_zarr2.py
mesospim_utils/fiji-linux/: ImageJ2.desktop
mesospim_utils/fiji-linux/Contents/: Info.plist
mesospim_utils/fiji-linux/java/linux-amd64/zulu8.86.0.25-ca-fx-jdk8.0.452-linux_x64/: readme.txt  release
notes/: ims_stitcher_notes.txt
