[metadata]
name = mesospim_utils

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/mesospim_utils
license = BSD-3-Clause
description = A python tool set for reading HOLiS data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/mesospim_utils/issues
    Documentation = https://github.com/CBI-PITT/mesospim_utils#README.md
    Source Code = https://github.com/CBI-PITT/mesospim_utils
    User Support = https://github.com/CBI-PITT/mesospim_utils/issues

[options]
packages = find:
python_requires = >=3.12
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    typer
    matplotlib
    scikit-image
    tifffile
    imagecodecs
    natsort
    torch
    torchvision
    torchaudio
    zarr
    dask
	psfmodels @ git+https://github.com/CBI-PITT/PSFmodels.git # Fork of original, could fail if some dependencies are missing for compile
	#psfmodels @ git+https://github.com/tlambert03/PSFmodels.git #Origional library