[metadata]
name = mesospim_utils

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/mesospim_utils
license = BSD-3-Clause
description = A python tool set for working with MesoSPIM data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/mesospim_utils/issues
    Documentation = https://github.com/CBI-PITT/mesospim_utils#README.md
    Source Code = https://github.com/CBI-PITT/mesospim_utils
    User Support = https://github.com/CBI-PITT/mesospim_utils/issues

[options]
packages = find:
python_requires = >=3.12
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    psutil
    typer
    matplotlib
    packaging
    colorama; sys_platform == "win32"
    scikit-image
    tifffile
    imagecodecs
    natsort
    torch
    torchvision
    zarr>=3.0.0
    numcodecs
    dask
    SimpleITK
    npy2bdv
	ome_zarr_multiscale_writer @ git+https://github.com/CBI-PITT/ome_zarr_multiscale_writer.git

[options.extras_require]
psfmodels =
    psfmodels @ git+https://github.com/CBI-PITT/PSFmodels.git
    #psfmodels @ git+https://github.com/tlambert03/PSFmodels.git #Origional library